# diffujudge-av

./: .env.example  .gitignore  LICENSE  README.md  article.md  pyproject.toml
.github/workflows/: ci.yml
configs/: coda_lm_stress.yaml  default.yaml  lingoqa.yaml  synthetic_smoke.yaml
dashboard/: streamlit_app.py
diffujudge/: __init__.py  cli.py  config.py  pipeline.py
diffujudge/conformal/: __init__.py  ordinal.py
diffujudge/data/: __init__.py  coda_lm.py  frame_sampler.py  golden_set.py  lingoqa.py  synthetic.py
diffujudge/denoiser/: __init__.py  learned.py  tweedie.py
diffujudge/eval/: __init__.py  harness.py
diffujudge/judges/: __init__.py  anthropic_judge.py  api_judge.py  base.py  ensemble.py  mock_judge.py  vllm_judge.py
diffujudge/metrics/: __init__.py  agreement.py  bias.py  calibration.py
diffujudge/perturbations/: __init__.py  cascade.py  operators.py
diffujudge/taxonomy/: __init__.py  nhtsa.py
diffujudge/utils/: __init__.py  jsonl.py  seeding.py
docs/: annotation_guide.md  methodology.md  nvidia_positioning.md
docs/figures/: comparison_metrics.json  final_summary.json  headline.json  model_comparison_table.json  subsample_experiment.json  synth_vs_lingoqa_metrics.json
nvidia/: README.md  carla_scenarios.py  nim_deployment.md  nvila_integration.py
scripts/: build_golden_set.py  build_lingoqa_corpus.py  calibrate.py  compute_bias_deltas.py  eval.py  generate_paraphrases.py  make_comparison_figures.py  make_final_figures.py  make_hero_figure.py  make_lingoqa_figures.py  redenoise.py  run_comparison.py  run_inference.py  run_together_ensemble.py  subsample_and_redenoise.py
tests/: conftest.py  test_conformal.py  test_judges.py  test_metrics.py  test_perturbations.py  test_pipeline.py  test_taxonomy.py  test_tweedie.py
