[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffujudge-av"
version = "0.1.0"
description = "Diffusion-inspired LLM/VLM-as-a-Judge with a flagship AV safety-critical video evaluator."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Syed Humashah", email = "shummashah@gmail.com"},
]
keywords = [
    "llm-as-a-judge", "vlm-as-a-judge", "evaluation", "calibration",
    "conformal-prediction", "tweedie", "diffusion", "autonomous-vehicles",
    "safety-critical", "lingoqa", "qwen2.5-vl",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pandas>=2.2",
    "pyarrow>=15",
    "duckdb>=0.10",
    "krippendorff>=0.6",
    "tqdm>=4.66",
    "rich>=13.7",
    "tenacity>=8.2",
    "orjson>=3.9",
    "typer>=0.12",
]

[project.optional-dependencies]
api = [
    "litellm>=1.40",
    "openai>=1.30",
    "anthropic>=0.30",
    "google-generativeai>=0.7",
]
vllm = [
    # Pin per arXiv 2604.25235 recipe: split-env required for Siglip2 vs LLaVA-Critic.
    "vllm>=0.6.3",
    "transformers>=4.47,<4.58",
    "qwen-vl-utils>=0.0.8",
    "decord>=0.6.0",
    "Pillow>=10.0",
    "torch>=2.3",
]
calibration = [
    "mapie==0.8.6",      # v1.x renamed CQR API per the 2026 conformal-VLM-judge paper
    "netcal>=1.3",
    "torchmetrics>=1.3",
]
learned = [
    "torch>=2.3",
    "tensorboard>=2.16",
]
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
]
all = [
    "diffujudge-av[api,calibration,learned,dashboard,dev]",
]

[project.scripts]
diffujudge = "diffujudge.cli:app"

[project.urls]
Homepage = "https://github.com/syedhumarahim/diffujudge-av"
Repository = "https://github.com/syedhumarahim/diffujudge-av"
Issues = "https://github.com/syedhumarahim/diffujudge-av/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["diffujudge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "gpu: tests that require a GPU (skipped by default)",
    "slow: tests that take more than ~5s",
    "api: tests that hit external LLM APIs (skipped without keys)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
